--- a/about.html
+++ b/about.html
@@ -16,8 +16,7 @@
     <link rel="stylesheet" href="css/primary.css">
 
     <!-- Script CDNs -->
-    <script src="https://kit.fontawesome.com/9cb4df6eec.js" crossorigin="anonymous"></script>
-    <script src="https://use.fontawesome.com/fce6c40c6d.js"></script>
+    <script src="https://kit.fontawesome.com/19d66a7841.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
@@ -90,11 +89,9 @@
             <p>it <span>me</span></p>
           </div>  
 
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus ullam enim, reprehenderit repellendus adipisci corrupti tenetur officiis magnam aperiam dolorem, quam est perspiciatis quas cum nesciunt atque, amet culpa ex. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus ullam enim, reprehenderit repellendus adipisci corrupti tenetur officiis magnam aperiam dolorem, quam est perspiciatis quas cum nesciunt atque, amet culpa ex. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+          <p>I’m a UX/UI Designer & Developer living in Denver. I have 4 years of experience working in the field. What I love most about UX Design is that I have the opportunity to shape digital design of the future. Through meaningful, intentional, human-centered design choices, I am able to contribute to the evolving world of interactive technology.</p>
           
-          <a id="about-me-resume-link" href="assets/nicholasMartin-resume.pdf" target="_blank">r&eacute;sum&eacute;</a>
+          <a id="about-me-resume-link" href="assets/nicholasMartin-resume.pdf" target="_blank"><i class="fa-regular fa-file"></i>r&eacute;sum&eacute;</a>
 
           <h3><a href="mailto:hello@nickmartin.design">hello@nickmartin.design</a></h3>
 
