--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <p>I like to do the <span>design</span> and sometimes other <span>stuff</span> too.</p>
       </div>
 
-      <p id="landing-section-intro">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus ullam enim, reprehenderit repellendus adipisci corrupti tenetur officiis magnam aperiam dolorem, quam est perspiciatis quas cum nesciunt atque, amet culpa ex. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+      <p id="landing-section-intro">I heard once that the difference bewteen design and art is that the former has an obligation to its audience, where the latter does not. I love reductionist statements like these. And while design and art are certainly more nuanced than this, having considerable overlap, I strive to make my work, often an intentional confluence of the two, similarly elegant.</p>
 
       <h3><a href="mailto:hello@nickmartin.design">hello@nickmartin.design</a></h3>
 
